ODP-2433 Make cruise-control 2.5.137 compatible for 3.2.3.3-2/3 rel.